<resources>
    <string name="app_name">Hedonist</string>
    <string name="coffee">Coffee (550 KZT)</string>
    <string name="Tea">Tea (450 KZT)</string>
    <string name="milkshake">Milkshake (650 KZT)</string>
    <string name="menu">Menu</string>
    <string name="select_an_addition">Select an addition:</string>
    <string name="cinnamon">Cinnamon (50 KZT)</string>
    <string name="milk">Milk (50 KZT)</string>
    <string name="sugar">Sugar (0 KZT)</string>
    <string name="marshmallow">Marshmallow (100 KZT)</string>
    <string name="lemon">Lemon (50 KZT)</string>
    <string name="write_your_comment_here">Write your comment here</string>
    <string name="order_now">Order now</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="total_sum">Total sum: %d</string>
    <string name="thank_you_text">Thank you for choosing our service! Your order is being processed.</string>
    <string name="your_order">You ordered: %s</string>
    <string name="email_hint">Email:</string>
    <string name="welcome_text">Be hedonist! Just enjoy drinking hot flavored beverage:)</string>
    <string name="application_logo">Application logo</string>
    <string name="continue_btn">Continue</string>
    <string name="mock_login">userAccount@account.com</string>
    <string name="password_hint">Password</string>


    <string-array name="items">
        <item>FSHFJ1</item>
        <item>FSHFJ21</item>
        <item>FSHFJ312312</item>
        <item>FSHFJ2412</item>
        <item>FSHFJ24</item>
        <item>FSHF2142412</item>
        <item>FSHF124124</item>
        <item>FSHFJ124</item>
    </string-array>
</resources>
