<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_orange_violet"
    tools:context=".LoginActivity"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_store"
            android:contentDescription="@string/application_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="#FFFFFF"
            android:fontFamily="cursive">

        </TextView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:padding="1dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:src="@drawable/ic_sugar"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/user_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/mock_login"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="1.2"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_continue"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:text="@string/continue_btn"/>

    </LinearLayout>

</LinearLayout>