<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_orange_violet"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:contentDescription="@string/application_logo"
            android:cropToPadding="true"
            android:src="@drawable/ic_store" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="cursive"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_white"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:padding="1dp">

            <ImageView
                android:id="@+id/coffee_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/ic_coffee"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/marshmallow_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/ic_sugar" />

            <ImageView
                android:id="@+id/cupcake_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/ic_muffin" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:hint="@string/prompt_email" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_continue"
            android:text="@string/continue_btn"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>